--- a/.github/workflows/tag-release1.yml
+++ b/.github/workflows/tag-release1.yml
@@ -3,19 +3,19 @@ name: Get Repo Versions
 on:
   workflow_dispatch:
     inputs:
-      tag:
-        description: 'Tag to apply'
+      release_branch:
+        description: 'Select a release branch'
         required: true
-      branch:
-        description: 'Branch to tag'
-        required: true
+        default: 'release/4.22'
         type: choice
         options:
-          - main
-          - release/4.21
           - release/4.22
           - release/4.23
           - release/4.24
+      release_tag:
+        description: 'Enter a tag for the release'
+        required: true
+        type: string
 env:
   username: ${{secrets.DEPLOYMENT_USERNAME}}
   password: ${{secrets.DEPLOYMENT_PAT}}
@@ -30,25 +30,29 @@ jobs:
       - name: Checkout release management repo
         uses: actions/checkout@v4
 
-      - name: Checkout target repository ${{ matrix.repo }}
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ matrix.repo }}
-          ref: ${{ github.event.inputs.branch }}
-          token: ${{ secrets.DEPLOYMENT_PAT }}
+      # Step 2: Set up Git configuration (for tagging)
+      - name: Set up Git
+        run: |
+          git config --global user.name ${{secrets.DEPLOYMENT_USERNAME}}
+          git config --global user.email "github-actions@github.com"
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '21' # Change based on your project requirements
+      # Step 3: Loop through each Java repository and perform actions
+      - name: Handle java-activity repository
+        run: |
+          git clone https://github.com/nirmata/java-activity.git
+          cd java-activity
+          git fetch --tags
+          # Remove the existing tag if it exists
+          git tag -d ${{ github.event.inputs.release_tag }} || true
+          git push --delete origin ${{ github.event.inputs.release_tag }} || true
+          # Checkout the selected branch
+          git checkout ${{ github.event.inputs.release_branch }}
+          # Tag the branch with the given tag
+          git tag ${{ github.event.inputs.release_tag }}
+          git push origin ${{ github.event.inputs.release_tag }}
+          # Trigger the master.yml action for java-activity
+          # curl -X POST \
+          #   -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          #   -d '{"ref":"${{ github.event.inputs.release_branch }}"}' \
+          #   https://api.github.com/repos/nirmata/java-activity/actions/workflows/master.yml/dispatches
 
-      - name: Grant execute permissions to Gradle
-        run: chmod +x gradlew
-
-      - name: Retrieve version from Gradle
-        id: get_version
-        run: echo "VERSION=$(./gradlew showVersion -q)" >> $GITHUB_ENV
-
-      - name: Output version
-        run: echo "Version of ${{ matrix.repo }} is $VERSION"
