Update and rename tag-generate-release.yml to tag-and-generate-images.yml

--- a/.github/workflows/tag-and-generate-images.yml
+++ b/.github/workflows/tag-and-generate-images.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: Tag Release
+name: Tag and Generate Images
 
 on:
   workflow_dispatch:
