--- a/.github/workflows/tag-branches.yml
+++ b/.github/workflows/tag-branches.yml
@@ -26,9 +26,10 @@ jobs:
   tag-branch-and-build-image:
     runs-on: ubuntu-latest
     strategy:
-       matrix:
+      matrix:
         repo: [ "java-activity", "java-catalog", "java-client-gateway", "java-cluster", "java-config", "java-environments", "gateway-service", "nirmata-haproxy", "java-host", "java-orchestrator", "policies-service", "java-security", "java-users", "webclient"]
-
+      fail-fast: false # This ensures that all jobs complete, even if one fails
+    
     steps:
       - name: Checkout release management repo
         uses: actions/checkout@v4
@@ -36,22 +37,34 @@ jobs:
       # Step 2: Set up Git configuration (for tagging)
       - name: Set up Git
         run: |
-          git config --global user.name ${{secrets.DEPLOYMENT_USERNAME}}
+          git config --global user.name ${{ secrets.DEPLOYMENT_USERNAME }}
           git config --global user.email "github-actions@github.com"
 
       # Step 3: Checkout and tag each repository
       - name: Tag and build ${{ matrix.repo }} with branch=${{ github.event.inputs.release_branch }}, tag=${{ github.event.inputs.release_tag }}
         run: |
-          git clone https://x-access-token:${{ secrets.DEPLOYMENT_PAT }}@github.com/nirmata/${{matrix.repo}}.git
+          git clone https://x-access-token:${{ secrets.DEPLOYMENT_PAT }}@github.com/nirmata/${{ matrix.repo }}.git
 
-          cd ${{ matrix.repo }}
-          git fetch --tags
+  # Create a new job to enforce serialized execution order
+  tag-branch-and-build-image-serial:
+    needs: tag-branch-and-build-image # This makes the jobs run serially, one after another
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        repo: [ "java-activity", "java-catalog", "java-client-gateway", "java-cluster", "java-config", "java-environments", "gateway-service", "nirmata-haproxy", "java-host", "java-orchestrator", "policies-service", "java-security", "java-users", "webclient"]
+    
+    steps:
+      - name: Checkout release management repo
+        uses: actions/checkout@v4
 
-          # Check if the tag exists and delete it if it does
-          if git show-ref --tags ${{ github.event.inputs.release_tag }}; then
-            git tag -d ${{ github.event.inputs.release_tag }}
-            git push --delete origin ${{ github.event.inputs.release_tag }}
-          fi
+      - name: Set up Git
+        run: |
+          git config --global user.name ${{ secrets.DEPLOYMENT_USERNAME }}
+          git config --global user.email "github-actions@github.com"
+
+      - name: Tag and build ${{ matrix.repo }} with branch=${{ github.event.inputs.release_branch }}, tag=${{ github.event.inputs.release_tag }}
+        run: |
+          git clone https://x-access-token:${{ secrets.DEPLOYMENT_PAT }}@github.com/nirmata/${{ matrix.repo }}.git
 
           # Checkout the selected branch
           git checkout ${{ github.event.inputs.release_branch }}
