--- a/.github/workflows/tag-branches.yml
+++ b/.github/workflows/tag-branches.yml
@@ -48,6 +48,8 @@ jobs:
     steps:
       - name: Checkout release management repo
         uses: actions/checkout@v4
+        with:
+          ref: main
 
       # Step 2: Set up Git configuration (for tagging)
       - name: Set up Git
@@ -76,6 +78,8 @@ jobs:
     steps:
       - name: Checkout release management repo
         uses: actions/checkout@v4
+        with:
+          ref: main
 
       - name: Set up Git
         run: |
@@ -102,6 +106,11 @@ jobs:
       packages: write
 
     steps:
+      - name: Checkout release management repo
+        uses: actions/checkout@v4
+        with:
+          ref: main
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
