fix: make MongoDB image tagging job independent of repository tagging

--- a/.github/workflows/tag-branches.yml
+++ b/.github/workflows/tag-branches.yml
@@ -11,7 +11,6 @@ on:
         default: 'release/4.22'
         type: choice
         options:
-          - main
           - release/4.22
           - release/4.23
           - release/4.24
@@ -43,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        repo: [ "java-activity", "java-catalog", "java-client-gateway", "java-cluster", "java-config", "java-environments", "gateway-service", "haproxy-nirmata", "java-host", "java-orchestrator", "policies-service", "java-security", "java-users", "webclient"]
+        repo: [ "java-activity", "java-catalog", "java-client-gateway", "java-cluster", "java-config", "java-environments", "gateway-service", "nirmata-haproxy", "java-host", "java-orchestrator", "policies-service", "java-security", "java-users", "webclient"]
       fail-fast: false # This ensures that all jobs complete, even if one fails
     
     steps:
@@ -100,7 +99,6 @@ jobs:
 
   retag-mongodb-images:
     if: ${{ github.event.inputs.tag_mongodb_images == 'true' }}
-    needs: tag-branch-and-build-image-serial
     runs-on: ubuntu-latest
     permissions:
       contents: read
