--- a/.github/workflows/tag-branches.yml
+++ b/.github/workflows/tag-branches.yml
@@ -28,6 +28,11 @@ on:
         required: false
         type: boolean
         default: true
+      tag_kafka_images:
+        description: 'Tag Kafka images with the release tag'
+        required: false
+        type: boolean
+        default: true
 
 env:
   REGISTRY: ghcr.io
@@ -164,6 +169,69 @@ jobs:
       - name: Verify Multi-Arch Support
         run: |
           for image in mongodb-community-server mongodb-agent-ubi mongodb-kubernetes-operator-version-upgrade-post-start-hook mongodb-kubernetes-readinessprobe mongodb-kubernetes-operator; do
+            echo "Verifying $image"
+            docker manifest inspect ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/$image:${{ github.event.inputs.release_tag }} | grep -q '"architecture": "amd64"' || exit 1
+            docker manifest inspect ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/$image:${{ github.event.inputs.release_tag }} | grep -q '"architecture": "arm64"' || exit 1
+            echo "Multi-arch support verified for $image:${{ github.event.inputs.release_tag }}"
+          done
+
+  tag-kafka-images:
+    if: ${{ github.event.inputs.tag_kafka_images == 'true' }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          platforms: linux/amd64,linux/arm64
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Tag and push Kafka
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          pull: true
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/kafka:${{ github.event.inputs.release_tag }}
+          build-args: |
+            SOURCE_IMAGE=${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/kafka:v1-4.0.0
+          provenance: false
+          sbom: false
+
+      - name: Tag and push Kafka Connect Data Pipeline POC
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          pull: true
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/kafka-connect-data-pipeline-poc:${{ github.event.inputs.release_tag }}
+          build-args: |
+            SOURCE_IMAGE=${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/kafka-connect-data-pipeline-poc:0.0.20-RC1
+          provenance: false
+          sbom: false
+
+      - name: Verify Multi-Arch Support
+        run: |
+          for image in kafka kafka-connect-data-pipeline-poc; do
             echo "Verifying $image"
             docker manifest inspect ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/$image:${{ github.event.inputs.release_tag }} | grep -q '"architecture": "amd64"' || exit 1
             docker manifest inspect ${{ env.REGISTRY }}/${{ env.REGISTRY_OWNER }}/$image:${{ github.event.inputs.release_tag }} | grep -q '"architecture": "arm64"' || exit 1
