Change GHCR login to use organization-level secret
Updated the GitHub Actions workflow to use an organization-level secret for authentication instead of the GITHUB_TOKEN.

--- a/.github/workflows/inspect-image.yml
+++ b/.github/workflows/inspect-image.yml
@@ -24,15 +24,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Log in to the GitHub Container Registry
+      # Log in to the GitHub Container Registry using the org-level secret
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          # The GITHUB_TOKEN is a special token provided by Actions.
-          # It's used to authenticate in your workflow.
+          # The username can still be the github.actor
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          # Use the organization-level secret for the password
+          password: ${{ secrets.DEPLOYMENT_PAT }}
 
       # Step to pull the container image
       - name: Pull container image
